name:                lua-musl
version:             0.0.0
synopsis:            Test
license:             MIT
author:              Albert Krewinkel
category:            Foreign
build-type:          Simple
extra-source-files:  lua-5.3.4/*.h
cabal-version:       >=1.10

library
  exposed-modules:     LuaMusl
  build-depends:       base                 >= 4.8    && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  include-dirs:        lua-5.3.4
                     , src
  c-sources:           src/lua-musl.c
                     , lua-5.3.4/lapi.c
                     , lua-5.3.4/lcode.c
                     , lua-5.3.4/lctype.c
                     , lua-5.3.4/ldebug.c
                     , lua-5.3.4/ldo.c
                     , lua-5.3.4/ldump.c
                     , lua-5.3.4/lfunc.c
                     , lua-5.3.4/lgc.c
                     , lua-5.3.4/llex.c
                     , lua-5.3.4/lmem.c
                     , lua-5.3.4/lobject.c
                     , lua-5.3.4/lopcodes.c
                     , lua-5.3.4/lparser.c
                     , lua-5.3.4/lstate.c
                     , lua-5.3.4/lstring.c
                     , lua-5.3.4/ltable.c
                     , lua-5.3.4/ltm.c
                     , lua-5.3.4/lundump.c
                     , lua-5.3.4/lvm.c
                     , lua-5.3.4/lzio.c

                     , lua-5.3.4/lauxlib.c
                     , lua-5.3.4/lbaselib.c
                     , lua-5.3.4/lbitlib.c
                     , lua-5.3.4/lcorolib.c
                     , lua-5.3.4/ldblib.c
                     , lua-5.3.4/liolib.c
                     , lua-5.3.4/lmathlib.c
                     , lua-5.3.4/lstrlib.c
                     , lua-5.3.4/loslib.c
                     , lua-5.3.4/ltablib.c
                     , lua-5.3.4/lutf8lib.c
                     , lua-5.3.4/loadlib.c
                     , lua-5.3.4/linit.c

  if os(linux)
    cc-options:          -DLUA_USE_LINUX

  if os(darwin)
    cc-options:          -DLUA_USE_MACOSX

  if os(freebsd)
    cc-options:          -DLUA_USE_POSIX

test-suite test-lua-musl
  type:                exitcode-stdio-1.0
  main-is:             test-lua-musl.hs
  hs-source-dirs:      test
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010
  build-depends:       base                 >= 4.8    && < 5
                     , lua-musl
                     , tasty
                     , tasty-hunit
